# tender_aibot

./: .gitignore  Dockerfile  docker-compose.yml  foundation.py  main.py  pyproject.toml  requirements.txt
ai/: agent.py  tools.py
database/: engine.py  models.py  orm_query.py
parser/: gz_parse.py  read_files.py
tg_bot/: analysis.py  client.py  keyboards.py  start.py  states.py  url_up.py
