[project]
name = "ai-tender-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.27.0",
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "mammoth>=1.12.0",
    "openpyxl>=3.1.5",
    "pycld2>=0.42",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "xlrd>=2.0.2",
]
